# semaxis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
demo/: demo_e2e_ollama.py
research/: README.md  catalog.yaml
research/ideas/: experiment-audit-logging.md  label-proxy-leakage-audit.md  sampling-strategy-benchmark.md  semantic-hypothesis-dedup.md
research/notes/: balek-2025.md  chill-2023.md  cosma-2026.md  felix-2024.md  gera-2022.md  koh-2020.md  liu-2022.md  logipart-2025.md  ma-2021.md  su-2022.md  tbm-2023.md  yin-2019.md  zhang-2023.md
research/reports/: deep-research-report.md
src/prism/: __init__.py
src/semaxis/: __init__.py  _base.py  llm.py  nli.py  oversampling.py  sampling.py  supervised.py  unsupervised.py
src/semaxis/prompts/: collection_description.py  discriminative_features.py  hard_positive.py
tests/: test_oversampling.py  test_sampling.py  test_supervised.py  test_unsupervised.py
