[tool.poetry]
name = "semaxis"
version = "0.15.0"
description = "Interpretable NLI-based text features for scikit-learn"
authors = []
packages = [{include = "semaxis", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
openai = ">=1.30"
tiktoken = ">=0.7"
sentence-transformers = ">=3.0"
scikit-learn = ">=1.4"
numpy = ">=1.26"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
mypy = "*"

[tool.poetry.group.langchain]
optional = true

[tool.poetry.group.langchain.dependencies]
langchain-core = ">=0.3"
langchain-ollama = ">=0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["sklearn.*", "sentence_transformers.*"]
ignore_missing_imports = true
