[project]
name = "semaxis"
version = "0.24.2"
description = "Interpretable NLI-based text features for scikit-learn"
readme = "README.md"
license = {file = "LICENSE"}
authors = []
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30",
    "tiktoken>=0.7",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pydantic>=2.0",
]

[project.optional-dependencies]
llamacpp = ["llama-cpp-python>=0.2.34"]
progress = ["tqdm>=4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semaxis"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pyalex>=0.21,<0.22",
]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["sklearn.*", "sentence_transformers.*", "tqdm.*", "llama_cpp.*", "scipy.*"]
ignore_missing_imports = true
